# Bucket-Chat

./: IMPLEMENTATION_PLAN.md  PROJECT_ROADMAP.md  QUICK_START_GUIDE.md  README.md  REFERENCE_CLIENT_PLAN.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml  requirements.txt  specification.md
src/bucket_chat/: __init__.py
src/bucket_chat/auth/: __init__.py
src/bucket_chat/cli/: main.py
src/bucket_chat/client/: __init__.py  client.py
src/bucket_chat/core/: __init__.py  crypto.py  events.py  storage.py
